<resources>
    <string name="app_name">TripTracks</string>
    <string name="str_but_añadir">Add Elements</string>
    <string name="str_but_borrar">Remove Elements</string>
    <string name="str_borrar">Remove</string>
    <string name="str_but_OK">OK</string>
    <string name="str_but_editar">Edit</string>
    <string name="str_mensaje_dialog">Add Itinerary</string>
    <string name="str_OK_dialog">OK</string>
    <string name="str_Cancel_dialog">Cancel</string>
    <string name="str_Articulo_id">Article</string>
    <string name="str_Titulo">"Article Title "</string>
    <string name="str_Subtitulo_art">"Article Subtitle "</string>
    <string name="str_descripcion">"Article Description "</string>
    <string name="hint_itinerary_name">Itinerary Name</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="ciudad">City: </string>
    <string name="pa_s">Country: </string>
    <string name="str_opcion1">Option 1</string>
    <string name="str_opcion_2">Option 2</string>
    <string name="str_opcion3">Option 3</string>
    <string name="str_opcion_4">Option 4</string>
    <string name="Informacion">Info</string>
    <string name="Borrar">Delete</string>
    <string name="error_message">Error</string>
    <string name="error_nombre_itinerario">Itinerary Name Incomplete</string>
    <string name="error_nombre_ciudad">City Name Incomplete</string>
    <string name="error_nombre_pais">Country Name Incomplete</string>
    <string name="select_country">Select a Country</string>
    <string name="select_state">Select a Region</string>
    <string name="select_city">Select a City</string>
    <string name="region">Region</string>
    <string name="Email">Email</string>
    <string name="Contraseña">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="str_menu_share">Share</string>
    <string name="str_menu_settings">Settings</string>
    <string name="pref_title_language">Language</string>
    <string name="pref_summary_language">Selected language: %1$s</string>
    <string name="pref_dialog_title_language">Select Language</string>
    <string name="Calendario">Calendar</string>
    <string name="Mapa">Map</string>
    <string name="edicion_cancelada">Editing canceled: missing a date selection</string>
    <string name="fecha_de_fin_seleccionada">End date selected</string>
    <string name="guardar_esta_fecha_como_fecha_de_inicio">Save this date as start date?</string>
    <string name="confirmaci_n">Confirmation</string>
    <string name="guardar_esta_fecha_como_fecha_de_fin">Save this date as end date?</string>
    <string name="fecha_de_inicio_seleccionada">Start date selected</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="agregar_actividad">Add Activity</string>
    <string name="exploraci_n">Exploration</string>
    <string name="gastronom_a">Gastronomy</string>
    <string name="entretenimiento">Entertainment</string>
    <string name="ingresa_la_actividad_para">"Enter the activity for "</string>
    <string name="aceptar">Accept</string>
    <string name="detalles">Details</string>
    <string name="editar">Edit</string>
    <string name="eliminar">Delete</string>
    <string name="opciones_de_evento">Event Options</string>
    <string name="tipo_de_actividad">Activity Type</string>
    <string name="detalles_del_evento">Event Details</string>
    <string name="actualizar">Update</string>
    <string name="confirmar_eliminaci_n">Confirm Deletion</string>
    <string name="est_s_seguro_de_que_deseas_eliminar_este_evento">Are you sure you want to delete this event?</string>
    <string name="Documentacion">Documentation</string>
    <string name="add_document">Add document</string>
    <string name="please_enter_document_name">Please enter document name</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="select_picture">Select picture</string>
    <string name="eliminar_documento">Delete document</string>
    <string name="est_seguro_de_que_desea_eliminar_este_documento">Are you sure you want to delete this document?</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="document_name">Document name</string>
    <string name="document_description">Document description</string>
    <string name="select_image">Select image</string>

    <string name="CerarSesion">Log Out</string>
    <string name="str_but_volver">Back</string>
    <string name="str_startdate">Start Date</string>
    <string name="str_enddate">End Date</string>
    <string name="str_but_compartir">Compartir</string>
    <string name="str_compartir">Share</string>
    <string name="str_cancelar">Cancel</string>
    <string name="athu_fail">Authentication attempt failed</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="opciones">Options</string>
    <string name="modo_oscuro">Dark Mode</string>
    <string name="modo_claro">Light Mode</string>
    <string name="tema">Application Theme</string>
    <string name="galeria">Galery</string>
    <string name="eliminar_imagen">Remove Image?</string>
    <string name="email_incompleto">Email field is incomplete</string>
    <string name="pass_incompleta">Password field is incomplete</string>
    <string name="est_seguro_de_que_desea_eliminar_esta_imagen">Are you sure you want to delete this image?</string>
    <string name="document_added_successfully">Document added successfully</string>

</resources>