<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_compartir"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/str_compartir"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_galeria"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/galeria"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_map"
        android:title="@string/Mapa"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_calendar"
        android:title="@string/Calendario"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>