<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_opcion_1"
        android:icon="@drawable/airplane"
        android:title="@string/str_opcion1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_documentacion"
        android:icon="@drawable/passport"
        android:title="@string/Documentacion"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/str_menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_opcion_cerrarSesion"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/CerarSesion"
        app:showAsAction="ifRoom" />
</menu>
