<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/but_borrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_borrar" />

        <Button
            android:id="@+id/but_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_but_editar"
            android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/but_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_but_OK"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/tile_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLayout"
        android:focusable="false"
        android:background="@drawable/background"
        android:visibility="gone"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tile_title_tv"
        android:layout_marginTop="8dp"
        tools:text="Element" />

    <LinearLayout
        android:id="@+id/layoutCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/element"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pa_s"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:background="@drawable/background"
            android:gravity="center"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutCountry"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:background="@drawable/background"
            android:gravity="center"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutState"
        android:visibility="gone"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:textSize="18sp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:id="@+id/description2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:background="@drawable/background"
            android:gravity="center"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</RelativeLayout>
